[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://space shooter assets/background.png" type="Texture" id=2]
[ext_resource path="res://PowerUpRespawn_Timer.gd" type="Script" id=3]
[ext_resource path="res://RockRespwan_Timer.gd" type="Script" id=4]
[ext_resource path="res://ScoreLabel.gd" type="Script" id=5]
[ext_resource path="res://dpcomic.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ReloadLabel.gd" type="Script" id=7]
[ext_resource path="res://Powerups.tscn" type="PackedScene" id=8]
[ext_resource path="res://EnemySpaceship_spawn.gd" type="Script" id=9]
[ext_resource path="res://AnimationPlayer.gd" type="Script" id=10]
[ext_resource path="res://RockSpawnLife.gd" type="Script" id=11]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -70.2556, -27.1309 )
b = Vector2( -74.7505, 641.114 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 124
font_data = ExtResource( 6 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 4.06354, 583.557 )

[sub_resource type="Animation" id=6]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "wave 2" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.2, 3.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Node" type="Node"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 513.737, 297.302 )
rotation = 1.5708
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 1 )]
collision_mask = 0

[node name="PlayerCollison" parent="Player" index="2"]
collision_layer = 0

[node name="EnemyRock_Deletion" type="Area2D" parent="."]
position = Vector2( 4.25911, -3.1748 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyRock_Deletion"]
position = Vector2( -39.6851, -1.58739 )
shape = SubResource( 1 )

[node name="RockRespawn_Timer" type="Timer" parent="."]
autostart = true
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -66.7968
margin_top = 1.58739
margin_right = -34.7968
margin_bottom = 17.5874
size_flags_vertical = 5
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReloadLabel" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.05945
margin_top = -42.6054
margin_right = 41.0594
margin_bottom = -28.6054
custom_fonts/font = SubResource( 3 )
text = "10/10"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.511
margin_top = -72.4071
margin_right = -137.511
margin_bottom = -58.4071
custom_fonts/font = SubResource( 4 )
text = "wave 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerUpRespawn_Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
script = ExtResource( 3 )
Pickpowerups = [ ExtResource( 8 ) ]

[node name="PowerUpDurabilty_Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="EnemyStop" type="Area2D" parent="."]
position = Vector2( 773.46, 2.66968 )
collision_layer = 0
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyStop"]
shape = SubResource( 5 )

[node name="RockSpawnLife" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
script = ExtResource( 11 )

[node name="EnemySpaceship_spawn" type="Timer" parent="."]
wait_time = 7.0
autostart = true
script = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/wave = SubResource( 6 )
script = ExtResource( 10 )
[connection signal="timeout" from="RockRespawn_Timer" to="RockRespawn_Timer" method="_on_Timer_timeout"]
[connection signal="timeout" from="PowerUpRespawn_Timer" to="PowerUpRespawn_Timer" method="_on_PowerUpRespawn_Timer_timeout"]
[connection signal="timeout" from="PowerUpDurabilty_Timer" to="Player" method="_on_PowerUpDurabilty_Timer_timeout"]
[connection signal="timeout" from="RockSpawnLife" to="RockSpawnLife" method="_on_RockSpawnLife_timeout"]
[connection signal="timeout" from="EnemySpaceship_spawn" to="EnemySpaceship_spawn" method="_on_EnemySpaceship_spawn_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="AnimationPlayer" method="_on_AnimationPlayer_animation_finished"]

[editable path="Player"]
